
2008-06-08  Sancho Lerena <slerena@gmail.com>

    * agenda.php. Implemented autonotification by email with a ical attach.
    added duration of event and group.

    * integria_dbdata.sql: Added default profiles with KB access.

    * operation/users/user_spare_workunit.php: Added event tracking.

    * operation/projects/task_workunit.php: Added event tracking.

    * operation/kb: Knowledgue base section. Not finished. Need many work.

    * include/functions.php: Better layout for pagination.

    * functions_db.php: Added function to create ical, to send email 
    attachment and to insert generic events into event tracking system.

    * godmode/setup/event.php: Event tracking view (need pagination and 
    search filters)

    * integria_db.sql: Several changes: tprofile, tagenda, added tevent, and
    knowledge tables (tkb*). 

    * Updated menus.

2009-06-06 Sancho Lerena <slerena@gmail.com>

	* user_task_assigment.php: Better layout, links to task
	also show ONLY unfinished tasks and show progress.

	* task_workunit.php: Fixed problem viewing specific task
	or project WU in list mode.

	* include/functions_graph.php,
	* user_report/monthly_graph.php: Graph was not working fine
	now shows only current - 30 days (one month) and do not show
	data from the future.

	* include/functions_calendar.php: Fixed problem calculating
	weeks (Julia detected this bug some time ago).

2009-06-03 Sancho Lerena <slerena@gmail.com>

	* Fixed problems editing vacations workunits. Added
	link in montly workunit report to add spare workunit with
	date from calendar. Fixed several problems in autologin
	and splitted toolbox in side menu to a different file.
	Available tasks for a given user don't show tasks from
	disabled projects.

2008-05-28 Sancho Lerena  <slerena@gmail.com>

	* A lot of fixes in incident, used user/email assigment
	for each group defined. Better management of WU in incidents
	and solved several bugs with delete, update and visualization